welcome.lessons.welcome.variables.Variables.scala.error
Variables:3: error: '=' expected but ';' found.
var dejafait==0
^Variables:5: error: '=' expected but ';' found.
while(!estSurBiscuit){
^